[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-algorithms"
version = "0.1.0"
description = "A collection of Python algorithm implementations"
authors = [
    { name = "Dennis Fashimpaur" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
